Add icons for link

--- a/mywork.html
+++ b/mywork.html
@@ -56,18 +56,18 @@
 
           <div class="content_container">      
             <h3>Github published books:</h3>
-              <a href="http://jonathan2251.github.io/lbd/index.html">Tutorial:
-                Creating an LLVM Backend for the Cpu0 Architecture</a><br>
-              <a href="http://jonathan2251.github.io/lbt/index.html">Tutorial:
-                Creating an LLVM Toolchain for the Cpu0 Architecture</a><br>
+              <a href="http://jonathan2251.github.io/lbd/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> Tutorial:
+                LLVM Backend</a><br>
+              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> Tutorial:
+                LLVM Toolchain</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">   
             <h3>Github working projects:</h3>
-              <a href="https://github.com/Jonathan2251/lbd.git">Tutorial:
-                Creating an LLVM Backend for the Cpu0 Architecture</a><br>
-              <a href="https://github.com/Jonathan2251/lbt.git">Tutorial:
-                Creating an LLVM Toolchain for the Cpu0 Architecture</a><br>
+              <a href="https://github.com/Jonathan2251/lbd.git"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> Tutorial:
+                LLVM Backend</a><br>
+              <a href="https://github.com/Jonathan2251/lbt.git"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" />Tutorial:
+                LLVM Toolchain</a><br>
           </div><!--close content_container-->
 		    </div><!--close content_item-->
       </div><!--close content-->
