--- a/more.html
+++ b/more.html
@@ -50,19 +50,23 @@
 
           <div class="content_container">
             <h3>Links:</h3>
-              <a href="http://blog.xuite.net/cschen07/blog">Blog</a><br>
-              <a href="http://jonathan2251.github.io/web/index.html">My github</a><br>
-              <a href="http://jonathan2251.github.io/web/resume.html">Resume</a><br>
-              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874">Linkedin</a><br>
+              <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="images/blog-icon.png" title="Blog" width="32" height="32" /></a>
+              <a href="http://jonathan2251.github.io/web/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /></a>
+              <a href="http://jonathan2251.github.io/web/resume.html"><img style="vertical-align: middle;" src="images/User-Coat-Red-icon.png" title="Resume" width="32" height="32" /></a>
+              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
           </div><!--close content_container-->
 
           <div class="content_container">
             <h3>Email:</h3>
-              <a href="mailto:gamma_chen@yahoo.com.tw">gamma_chen@yahoo.com.tw</a>
+              <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="images/email-icon.png" alt="email" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
     </div><!--close content-->
 	</div><!--close site_content-->
+
+  <footer>
+    Icons resource <a href="http://www.iconarchive.com/">website</a>
+  </footer>
   </div><!--close main-->
 
   <!-- javascript at the bottom for fast page loading -->
