Add icons for link

--- a/more.html
+++ b/more.html
@@ -61,11 +61,17 @@
               <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="images/email-icon.png" alt="email" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
+
+      <!--insert 3 space lines before footer-->
+      <div class="content_item">
+        <h2></h2>
+        <p><br><br><br></p>
+		  </div><!--close content_item-->
     </div><!--close content-->
 	</div><!--close site_content-->
 
   <footer>
-    Icons resource <a href="http://www.iconarchive.com/">website</a>
+    <a href="http://www.iconarchive.com/">Website of icon resource</a>
   </footer>
   </div><!--close main-->
 
