--- a/more_ch1.html
+++ b/more_ch1.html
@@ -17,22 +17,22 @@
     <header>
 	  <div id="strapline">
 	    <div id="welcome_slogan">
-	      <h3>Welcome To <span>Chen Chung-Shu's website</span></h3>
+	      <h3>歡迎來到 <span>陳鍾樞的網頁</span></h3>
 	    </div><!--close welcome_slogan-->
 	    <div id="language_container">
         <select name="language", id="lang", onchange="ChangeLanguage()">
-        <option value="English" selected>English</option>
-        <option value="Chinese1">中文繁體</option>
+        <option value="English">English</option>
+        <option value="Chinese1" selected>中文繁體</option>
         </select>
 	    </div><!--close language_container-->
     </div><!--close strapline-->
 	  <nav>
 	    <div id="menubar">
         <ul id="nav">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="mywork.html">My Work</a></li>
-          <li class="current"><a href="more.html">More</a></li>
-          <li><a href="personal.html">Personal</a></li>
+          <li><a href="index_ch1.html">首頁</a></li>
+          <li><a href="mywork_ch1.html">我的作品</a></li>
+          <li class="current"><a href="more_ch1.html">更多</a></li>
+          <li><a href="personal_ch1.html">私人</a></li>
         </ul>
       </div><!--close menubar-->
     </nav>
@@ -41,9 +41,9 @@
     <div id="slideshow_container">
 	    <div class="slideshow">
 	      <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="images/more_1.jpg" alt="&quot;Biking&quot;" /></li>
-          <li><img width="940" height="250" src="images/more_2.jpg" alt="&quot;Hualien coast&quot;" /></li>
-          <li><img width="940" height="250" src="images/more_3.jpg" alt="&quot;A house at Shuangsi&quot;" /></li>
+          <li class="show"><img width="940" height="250" src="images/more_1.jpg" alt="&quot;騎腳踏車&quot;" /></li>
+          <li><img width="940" height="250" src="images/more_2.jpg" alt="&quot;花蓮海岸線&quot;" /></li>
+          <li><img width="940" height="250" src="images/more_3.jpg" alt="&quot;雙溪的房子&quot;" /></li>
         </ul>
 	    </div><!--close slideshow-->
 	  </div><!--close slideshow_container-->
@@ -51,20 +51,20 @@
 	<div id="site_content">
 	  <div id="content">
       <div class="content_item">
-        <h2>More</h2>
-        <p>My other related links and email are here.</p>
+        <h2>更多</h2>
+        <p>我的其他網頁資訊連結與電子郵件如下︰</p>
 
           <div class="content_container">
-            <h3>Links:</h3>
-              <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="images/blog-icon.png" title="Blog" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/web/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/web/resume.html"><img style="vertical-align: middle;" src="images/User-Coat-Red-icon.png" title="Resume" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+            <h3>其他網頁資訊連結︰</h3>
+              <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="images/blog-icon.png" title="部落格" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/web/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="我的github" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/web/resume.html"><img style="vertical-align: middle;" src="images/User-Coat-Red-icon.png" title="履歷" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
           </div><!--close content_container-->
 
           <div class="content_container">
-            <h3>Email:</h3>
-              <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="images/email-icon.png" title="email" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
+            <h3>電子郵件︰</h3>
+              <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="images/email-icon.png" title="電子郵件" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
 
