--- a/index_ch1.html
+++ b/index_ch1.html
@@ -68,7 +68,7 @@
 	</div><!--close site_content-->  	
 
   <footer>
-    網頁樣板從 <a href="http://www.freehtml5templates.co.uk">免費 HTML5 樣板</a>
+    網頁樣板來自 <a href="http://www.freehtml5templates.co.uk">免費 HTML5 樣板</a>
   </footer>
 	
   </div><!--close main-->
