--- a/more_ch1.html
+++ b/more_ch1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>More</title>
+  <title>更多</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -77,7 +77,7 @@
 	</div><!--close site_content-->
 
   <footer>
-    <a href="http://www.iconarchive.com/">Website of icon resource</a>
+    <a href="http://www.iconarchive.com/">免費的圖像網站</a>
   </footer>
   </div><!--close main-->
 
