--- a/index_ch1.html
+++ b/index_ch1.html
@@ -61,7 +61,7 @@
 
           <div class="content_container">       
 		        <h3>我的嗜好︰</h3>
-		        <p>電腦與英文的閱讀及寫作. 網球、騎腳踏車、看電影.</p>
+		        <p>電腦與英文的閱讀及寫作。 網球、騎腳踏車、看電影。</p>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
     </div><!--close content-->   
