--- a/personal.html
+++ b/personal.html
@@ -185,6 +185,7 @@
           <li><img class="resize" src="images/personal/2011-igloo 5.jpg" alt="&quot;igloo&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-Ride horse 1.jpg" alt="&quot;Ride horse&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-Ride horse 2.jpg" alt="&quot;Ride horse&quot;" /></li>
+          <li><img class="resize" src="images/personal/2011-Ride horse 3.jpg" alt="&quot;Ride horse&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-Church summer activity 1.jpg" alt="&quot;2012-Church summer activity&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-fishing 1.jpg" alt="&quot;fishing&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-fishing 2.jpg" alt="&quot;fishing&quot;" /></li>
