--- a/personal_ch1.html
+++ b/personal_ch1.html
@@ -185,6 +185,7 @@
           <li><img class="resize" src="images/personal/2011-igloo 5.jpg" alt="&quot;冰屋&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-Ride horse 1.jpg" alt="&quot;騎馬&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-Ride horse 2.jpg" alt="&quot;騎馬&quot;" /></li>
+          <li><img class="resize" src="images/personal/2011-Ride horse 3.jpg" alt="&quot;騎馬&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-Church summer activity 1.jpg" alt="&quot;2012-教會活動&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-fishing 1.jpg" alt="&quot;撈魚&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-fishing 2.jpg" alt="&quot;撈魚&quot;" /></li>
