Add thesis and old works

--- a/mywork.html
+++ b/mywork.html
@@ -68,6 +68,17 @@
                 LLVM Toolchain</a><br>
           </div><!--close content_container-->
 
+          <div class="content_container">
+            <h3>Thesis of master degree:</h3>
+              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="32" height="32" /> The Researches of Column Sort and Related Problems</a><br>
+            <h3>Proposal of PHD study:</h3>
+              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="images/user_phd.png" title="The Researches of Sorting Network and Related Algorithm" width="32" height="32" /> The Researches of Sorting Network and Related Algorithm</a><br>
+          </div><!--close content_container-->
+
+          <div class="content_container">
+            <a href="http://jonathan2251.github.io/web/myoldwork.html"><img style="vertical-align: middle;" src="images/Programming-Cpp-icon.png" title="Other old works" width="32" height="32" /> Other old works</a><br>
+          </div><!--close content_container-->
+
           <div class="content_container">   
             <form name="jksearch" action="http://www.google.com/search" method="get" onSubmit="jksitesearch(this)">
             <p>Search my github:<br />
@@ -101,8 +112,8 @@
             </script>
             </p>
             </form>
-
           </div><!--close content_container-->
+
 		    </div><!--close content_item-->
       </div><!--close content-->
 	</div><!--close site_content-->
