--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <!-- javascript at the bottom for fast page loading -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/image_slide.js"></script>
+  <script type="text/javascript" src="js/functions.js"></script>
   
 </body>
 </html>
