--- a/mywork.html
+++ b/mywork.html
@@ -83,33 +83,10 @@
             <form name="jksearch" action="http://www.google.com/search" method="get" onSubmit="jksitesearch(this)">
             <p>Search my github:<br />
             <input id="hiddenquery" type="hidden" name="q" />
-            <input name="qfront" type="text" style="width: 200px" value="" /> <input type="submit" value="Search" /><br />
+            <input name="qfront" type="text" style="width: 200px" value="" />
+            <input type="submit" value="Search" /><br />
             <div style="font: bold 11px Verdana;">Google:<input name="se" type="radio" checked>  Yahoo:<input name="se" type="radio">  MSN:<input name="se" type="radio">
             </div>
-            <script type="text/javascript">
-            // All-in-one Internal Site Search script- By JavaScriptKit.com (http://www.javascriptkit.com)
-            // For this and over 400+ free scripts, visit JavaScript Kit- http://www.javascriptkit.com/
-            // This notice must stay intact for use
-            //Enter domain of site to search.
-            var domainroot="http://jonathan2251.github.io"
-            var searchaction=[ //form action for the 3 search engines
-              "http://www.google.com/search",
-              "http://search.yahoo.com/search",
-              "http://search.msn.com/results.aspx"
-            ]
-            var queryfieldname=["q","p","q"] //name of hidden query form for the 3 search engines
-            function switchaction(cur, index) {
-              cur.form.action=searchaction[index]
-              document.getElementById("hiddenquery").name=queryfieldname[index]
-            }
-            function jksitesearch(curobj) {
-              for (i=0; i< document.jksearch.se.length; i++) { //loop through radio to see which is checked
-              if (document.jksearch.se[i].checked==true)
-                switchaction(document.jksearch.se[i], i)
-              }
-              document.getElementById("hiddenquery").value="site:"+domainroot+" "+curobj.qfront.value
-            }
-            </script>
             </p>
             </form>
           </div><!--close content_container-->
@@ -121,7 +98,9 @@
 
   <!-- javascript at the bottom for fast page loading -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/image_slide.js"></script>	
+  <script type="text/javascript" src="js/image_slide.js"></script>
+  <script> var domainroot="http://jonathan2251.github.io"; </script>
+  <script type="text/javascript" src="js/functions.js"></script>
   
 </body>
 </html>
