--- a/personal_ch1.html
+++ b/personal_ch1.html
@@ -293,7 +293,8 @@
     
   <!-- javascript at the bottom for fast page loading -->
   <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/image_slide.js"></script>	
+  <script type="text/javascript" src="js/image_slide.js"></script>
+  <script type="text/javascript" src="js/functions.js"></script>
   
 </body>
 </html>
