change github writing links

--- a/mywork.html
+++ b/mywork.html
@@ -76,7 +76,7 @@
           </div><!--close content_container-->
 
           <div class="content_container">
-            <a href="http://jonathan2251.github.io/web/myoldwork.html"><img style="vertical-align: middle;" src="images/Programming-Cpp-icon.png" title="Other old works" width="32" height="32" /> Other old works</a><br>
+            <a href="http://jonathan2251.github.io/wr/myoldwork.html"><img style="vertical-align: middle;" src="images/Programming-Cpp-icon.png" title="Other old works" width="32" height="32" /> Other old works</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">   
