--- a/mywork_ch1.html
+++ b/mywork_ch1.html
@@ -74,7 +74,7 @@
           </div><!--close content_container-->
 
           <div class="content_container">
-            <a href="http://jonathan2251.github.io/web/myoldwork.html"><img style="vertical-align: middle;" src="images/Programming-Cpp-icon.png" title="其他舊作" width="32" height="32" /> 其他舊作</a><br>
+            <a href="http://jonathan2251.github.io/wr/myoldwork.html"><img style="vertical-align: middle;" src="images/Programming-Cpp-icon.png" title="其他舊作" width="32" height="32" /> 其他舊作</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">   
