--- a/personal_ch1.html
+++ b/personal_ch1.html
@@ -186,7 +186,6 @@
           <li><img class="resize" src="images/personal/2011-Ride horse 1.jpg" alt="&quot;騎馬&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-Ride horse 2.jpg" alt="&quot;騎馬&quot;" /></li>
           <li><img class="resize" src="images/personal/2011-Ride horse 3.jpg" alt="&quot;騎馬&quot;" /></li>
-          <li><img class="resize" src="images/personal/2012-Church summer activity 1.jpg" alt="&quot;2012-教會活動&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-fishing 1.jpg" alt="&quot;撈魚&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-fishing 2.jpg" alt="&quot;撈魚&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-Taipei-Small elephants 1.jpg" alt="&quot;小隻大象&quot;" /></li>
@@ -199,6 +198,27 @@
           <li><img class="resize" src="images/personal/2012-放天燈2.jpg" alt="&quot;平溪放天燈&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-放天燈3.jpg" alt="&quot;平溪放天燈&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-放天燈4.jpg" alt="&quot;平溪放天燈&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay1.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay2.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay3.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay4.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay5.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay6.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay7.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay8.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay9.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay10.JPG" alt="&quot;clay&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-教會受洗1.JPG" alt="&quot;教會受洗&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-教會受洗2.JPG" alt="&quot;教會受洗&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-科博館1.JPG" alt="&quot;科博館&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-科博館2.JPG" alt="&quot;科博館&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-野柳1.JPG" alt="&quot;野柳&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-野柳2.JPG" alt="&quot;野柳&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-野柳3.JPG" alt="&quot;野柳&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-野柳4.JPG" alt="&quot;野柳&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-野柳5.JPG" alt="&quot;野柳&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-野柳6.JPG" alt="&quot;野柳&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Church summer activity 1.jpg" alt="&quot;2012-教會活動&quot;" /></li>
           <li><img class="resize" src="images/personal/2013-Ride cow 1.jpg" alt="&quot;騎牛&quot;" /></li>
           <li><img class="resize" src="images/personal/2013-Ride cow 2.jpg" alt="&quot;騎牛&quot;" /></li>
           <li><img class="resize" src="images/personal/2013-Ride cow 3.jpg" alt="&quot;騎牛&quot;" /></li>
