--- a/personal_ch1.html
+++ b/personal_ch1.html
@@ -198,6 +198,9 @@
           <li><img class="resize" src="images/personal/2012-放天燈2.jpg" alt="&quot;平溪放天燈&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-放天燈3.jpg" alt="&quot;平溪放天燈&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-放天燈4.jpg" alt="&quot;平溪放天燈&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-PlayToy1.JPG" alt="&quot;玩玩具&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-PlayToy2.JPG" alt="&quot;玩玩具&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-PlayToy3.JPG" alt="&quot;玩玩具&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-Clay1.JPG" alt="&quot;做陶土&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-Clay2.JPG" alt="&quot;做陶土&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-Clay3.JPG" alt="&quot;做陶土&quot;" /></li>
@@ -207,7 +210,12 @@
           <li><img class="resize" src="images/personal/2012-Clay7.JPG" alt="&quot;做陶土&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-Clay8.JPG" alt="&quot;做陶土&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-Clay9.JPG" alt="&quot;做陶土&quot;" /></li>
-          <li><img class="resize" src="images/personal/2012-Clay10.JPG" alt="&quot;clay&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-Clay10.JPG" alt="&quot;做陶土&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-21世紀烤雞1.JPG" alt="&quot;21世紀烤雞&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-21世紀烤雞2.JPG" alt="&quot;21世紀烤雞&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-21世紀烤雞3.JPG" alt="&quot;21世紀烤雞&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-21世紀烤雞4.JPG" alt="&quot;21世紀烤雞&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-21世紀烤雞5.JPG" alt="&quot;21世紀烤雞&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-教會受洗1.JPG" alt="&quot;教會受洗&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-教會受洗2.JPG" alt="&quot;教會受洗&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-科博館1.JPG" alt="&quot;科博館&quot;" /></li>
