--- a/personal.html
+++ b/personal.html
@@ -226,7 +226,37 @@
           <li><img class="resize" src="images/personal/2012-野柳4.JPG" alt="&quot;Yehliu&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-野柳5.JPG" alt="&quot;Yehliu&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-野柳6.JPG" alt="&quot;Yehliu&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-TaipeiCityHallMRT1.JPG" alt="&quot;MRT station of Taipei City Hall&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012-TaipeiCityHallMRT2.JPG" alt="&quot;MRT station of Taipei City Hall&quot;" /></li>
           <li><img class="resize" src="images/personal/2012-Church summer activity 1.jpg" alt="&quot;2012-Church summer activity&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB240002.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB240014.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB240015.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB240020.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB240029.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB240032.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250033.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250035.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250037.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250039.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250040.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250042.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250043.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250044.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250045.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250049.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250050.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250051.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB250054.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB270073.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB270075.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB270076.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB270079.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB270081.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB270083.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB270097.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PB270103.JPG" alt="&quot;2012-Kaohsiung City&quot;" /></li>
+          <li><img class="resize" src="images/personal/2012/PC150110.JPG" alt="&quot;2012-Tooth off&quot;" /></li>
           <li><img class="resize" src="images/personal/2013-Ride cow 1.jpg" alt="&quot;Ride cow&quot;" /></li>
           <li><img class="resize" src="images/personal/2013-Ride cow 2.jpg" alt="&quot;Ride cow&quot;" /></li>
           <li><img class="resize" src="images/personal/2013-Ride cow 3.jpg" alt="&quot;Ride cow&quot;" /></li>
