--- a/mywork.html
+++ b/mywork.html
@@ -70,9 +70,9 @@
 
           <div class="content_container">
             <h3>Thesis of master degree:</h3>
-              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="32" height="32" /> The Researches of Column Sort and Related Problems</a><br>
+              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="32" height="32" /> The Researches of Column Sort and Related Problems</a><br>
             <h3>Proposal of PHD study:</h3>
-              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="images/user_phd.png" title="The Researches of Sorting Network and Related Algorithm" width="32" height="32" /> The Researches of Sorting Network and Related Algorithm</a><br>
+              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/PHD"><img style="vertical-align: middle;" src="images/user_phd.png" title="The Researches of Sorting Network and Related Algorithm" width="32" height="32" /> The Researches of Sorting Network and Related Algorithm</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">
