--- a/mywork_ch1.html
+++ b/mywork_ch1.html
@@ -68,9 +68,9 @@
 
           <div class="content_container">
             <h3>碩士論文:</h3>
-              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="images/user_phd.png" title="行排序演算法相關問題之研究" width="32" height="32" /> 行排序演算法相關問題之研究</a><br>
+              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="images/user_phd.png" title="行排序演算法相關問題之研究" width="32" height="32" /> 行排序演算法相關問題之研究</a><br>
             <h3>博士班研究Proposal:</h3>
-              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="images/user_phd.png" title="排序網路及相關演算法之研究" width="32" height="32" /> 排序網路及相關演算法之研究</a><br>
+              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/PHD"><img style="vertical-align: middle;" src="images/user_phd.png" title="排序網路及相關演算法之研究" width="32" height="32" /> 排序網路及相關演算法之研究</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">
