fine tune for muti-language template

--- a/ch1/mywork.html
+++ b/ch1/mywork.html
@@ -6,9 +6,9 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
-  <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
+  <script type="text/javascript" src="../js/modernizr-1.5.min.js"></script>
 </head>
 
 <body>
@@ -29,10 +29,10 @@
 	  <nav>
 	    <div id="menubar">
         <ul id="nav">
-          <li><a href="index_ch1.html">首頁</a></li>
-          <li class="current"><a href="mywork_ch1.html">我的作品</a></li>
-          <li><a href="more_ch1.html">更多</a></li>
-          <li><a href="personal_ch1.html">私人</a></li>
+          <li><a href="index.html">首頁</a></li>
+          <li class="current"><a href="mywork.html">我的作品</a></li>
+          <li><a href="more.html">更多</a></li>
+          <li><a href="personal.html">私人</a></li>
         </ul>
       </div><!--close menubar-->
     </nav>
@@ -41,8 +41,8 @@
     <div id="slideshow_container">
 	    <div class="slideshow">
 	      <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="images/mywork_1.jpg" alt="&quot;LLVM backend 書籍&quot;" /></li>
-          <li><img width="940" height="250" src="images/mywork_2.jpg" alt="&quot;辛苦的工作&quot;" /></li>
+          <li class="show"><img width="940" height="250" src="../images/mywork_1.jpg" alt="&quot;LLVM backend 書籍&quot;" /></li>
+          <li><img width="940" height="250" src="../images/mywork_2.jpg" alt="&quot;辛苦的工作&quot;" /></li>
           </ul>
 	    </div><!--close slideshow-->
 	  </div><!--close slideshow_container-->
@@ -60,21 +60,21 @@
 
           <div class="content_container">      
             <h3>Github出版書籍︰</h3>
-              <a href="http://jonathan2251.github.io/lbd/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> 教學文件:
+              <a href="http://jonathan2251.github.io/lbd/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> 教學文件:
                 LLVM Backend</a><br>
-              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> 教學文件:
+              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> 教學文件:
                 LLVM Toolchain</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">
             <h3>碩士論文:</h3>
-              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="images/user_phd.png" title="行排序演算法相關問題之研究" width="32" height="32" /> 行排序演算法相關問題之研究</a><br>
+              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="../images/user_phd.png" title="行排序演算法相關問題之研究" width="32" height="32" /> 行排序演算法相關問題之研究</a><br>
             <h3>博士班研究Proposal:</h3>
-              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/PHD"><img style="vertical-align: middle;" src="images/user_phd.png" title="排序網路及相關演算法之研究" width="32" height="32" /> 排序網路及相關演算法之研究</a><br>
+              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/PHD"><img style="vertical-align: middle;" src="../images/user_phd.png" title="排序網路及相關演算法之研究" width="32" height="32" /> 排序網路及相關演算法之研究</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">
-            <a href="http://jonathan2251.github.io/wr/myoldwork.html"><img style="vertical-align: middle;" src="images/Programming-Cpp-icon.png" title="其他舊作" width="32" height="32" /> 其他舊作</a><br>
+            <a href="http://jonathan2251.github.io/wr/myoldwork.html"><img style="vertical-align: middle;" src="../images/Programming-Cpp-icon.png" title="其他舊作" width="32" height="32" /> 其他舊作</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">   
@@ -95,10 +95,10 @@
   </div><!--close main-->
 
   <!-- javascript at the bottom for fast page loading -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/image_slide.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/image_slide.js"></script>
   <script> var domainroot="http://jonathan2251.github.io"; </script>
-  <script type="text/javascript" src="js/functions.js"></script>	
+  <script type="text/javascript" src="../js/functions.js"></script>	
   
 </body>
 </html>
