--- a/en/mywork.html
+++ b/en/mywork.html
@@ -6,9 +6,9 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
-  <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
+  <script type="text/javascript" src="../js/modernizr-1.5.min.js"></script>
 </head>
 
 <body>
@@ -41,8 +41,8 @@
     <div id="slideshow_container">
 	    <div class="slideshow">
 	      <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="images/mywork_1.jpg" alt="&quot;LLVM backend books&quot;" /></li>
-          <li><img width="940" height="250" src="images/mywork_2.jpg" alt="&quot;Working hard&quot;" /></li>
+          <li class="show"><img width="940" height="250" src="../images/mywork_1.jpg" alt="&quot;LLVM backend books&quot;" /></li>
+          <li><img width="940" height="250" src="../images/mywork_2.jpg" alt="&quot;Working hard&quot;" /></li>
           </ul>
 	    </div><!--close slideshow-->
 	  </div><!--close slideshow_container-->
@@ -62,21 +62,21 @@
 
           <div class="content_container">      
             <h3>Github published books:</h3>
-              <a href="http://jonathan2251.github.io/lbd/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> Tutorial:
+              <a href="http://jonathan2251.github.io/lbd/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> Tutorial:
                 LLVM Backend</a><br>
-              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> Tutorial:
+              <a href="http://jonathan2251.github.io/lbt/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My github" width="32" height="32" /> Tutorial:
                 LLVM Toolchain</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">
             <h3>Thesis of master degree:</h3>
-              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="32" height="32" /> The Researches of Column Sort and Related Problems</a><br>
+              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/ThesisMaster"><img style="vertical-align: middle;" src="../images/user_phd.png" title="The Researches of Column Sort and Related Problems" width="32" height="32" /> The Researches of Column Sort and Related Problems</a><br>
             <h3>Proposal of PHD study:</h3>
-              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/PHD"><img style="vertical-align: middle;" src="images/user_phd.png" title="The Researches of Sorting Network and Related Algorithm" width="32" height="32" /> The Researches of Sorting Network and Related Algorithm</a><br>
+              <a href="https://github.com/Jonathan2251/ow/tree/master/sortingnetwork/PHD"><img style="vertical-align: middle;" src="../images/user_phd.png" title="The Researches of Sorting Network and Related Algorithm" width="32" height="32" /> The Researches of Sorting Network and Related Algorithm</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">
-            <a href="http://jonathan2251.github.io/wr/myoldwork.html"><img style="vertical-align: middle;" src="images/Programming-Cpp-icon.png" title="Other old works" width="32" height="32" /> Other old works</a><br>
+            <a href="http://jonathan2251.github.io/wr/myoldwork.html"><img style="vertical-align: middle;" src="../images/Programming-Cpp-icon.png" title="Other old works" width="32" height="32" /> Other old works</a><br>
           </div><!--close content_container-->
 
           <div class="content_container">   
@@ -97,10 +97,10 @@
   </div><!--close main-->
 
   <!-- javascript at the bottom for fast page loading -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/image_slide.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/image_slide.js"></script>
   <script> var domainroot="http://jonathan2251.github.io"; </script>
-  <script type="text/javascript" src="js/functions.js"></script>
+  <script type="text/javascript" src="../js/functions.js"></script>
   
 </body>
 </html>
