--- a/ch1/more.html
+++ b/ch1/more.html
@@ -6,9 +6,9 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
-  <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
+  <script type="text/javascript" src="../js/modernizr-1.5.min.js"></script>
 </head>
 
 <body>
@@ -29,10 +29,10 @@
 	  <nav>
 	    <div id="menubar">
         <ul id="nav">
-          <li><a href="index_ch1.html">首頁</a></li>
-          <li><a href="mywork_ch1.html">我的作品</a></li>
-          <li class="current"><a href="more_ch1.html">更多</a></li>
-          <li><a href="personal_ch1.html">私人</a></li>
+          <li><a href="index.html">首頁</a></li>
+          <li><a href="mywork.html">我的作品</a></li>
+          <li class="current"><a href="more.html">更多</a></li>
+          <li><a href="personal.html">私人</a></li>
         </ul>
       </div><!--close menubar-->
     </nav>
@@ -41,9 +41,9 @@
     <div id="slideshow_container">
 	    <div class="slideshow">
 	      <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="images/more_1.jpg" alt="&quot;騎腳踏車&quot;" /></li>
-          <li><img width="940" height="250" src="images/more_2.jpg" alt="&quot;花蓮海岸線&quot;" /></li>
-          <li><img width="940" height="250" src="images/more_3.jpg" alt="&quot;雙溪的房子&quot;" /></li>
+          <li class="show"><img width="940" height="250" src="../images/more_1.jpg" alt="&quot;騎腳踏車&quot;" /></li>
+          <li><img width="940" height="250" src="../images/more_2.jpg" alt="&quot;花蓮海岸線&quot;" /></li>
+          <li><img width="940" height="250" src="../images/more_3.jpg" alt="&quot;雙溪的房子&quot;" /></li>
         </ul>
 	    </div><!--close slideshow-->
 	  </div><!--close slideshow_container-->
@@ -56,15 +56,15 @@
 
           <div class="content_container">
             <h3>其他網頁資訊連結︰</h3>
-              <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="images/blog-icon.png" title="部落格" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/wr/index.html"><img style="vertical-align: middle;" src="images/GitHub-Mark-32px.png" title="我的寫作" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="images/User-Coat-Red-icon.png" title="履歷" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
+              <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="../images/blog-icon.png" title="部落格" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="我的寫作" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="../images/User-Coat-Red-icon.png" title="履歷" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="../images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
           </div><!--close content_container-->
 
           <div class="content_container">
             <h3>電子郵件︰</h3>
-              <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="images/email-icon.png" title="電子郵件" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
+              <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="../images/email-icon.png" title="電子郵件" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
 
@@ -82,9 +82,9 @@
   </div><!--close main-->
 
   <!-- javascript at the bottom for fast page loading -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/image_slide.js"></script>
-  <script type="text/javascript" src="js/functions.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/image_slide.js"></script>
+  <script type="text/javascript" src="../js/functions.js"></script>
   
 </body>
 </html>
