--- a/en/index.html
+++ b/en/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-  <title>首頁</title>
+  <title>Home</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
-  <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
+  <script type="text/javascript" src="../js/modernizr-1.5.min.js"></script>
 </head>
 
 <body>
@@ -17,22 +17,22 @@
     <header>
 	  <div id="strapline">
 	    <div id="welcome_slogan">
-	      <h3>歡迎來到 <span>陳鍾樞的網頁</span></h3>
+	      <h3>Welcome To <span>Chen Chung-Shu's website</span></h3>
 	    </div><!--close welcome_slogan-->
 	    <div id="language_container">
         <select name="language", id="lang", onchange="ChangeLanguage()">
-        <option value="English">English</option>
-        <option value="Chinese1" selected>中文繁體</option>
+        <option value="English" selected>English</option>
+        <option value="Chinese1">中文繁體</option>
         </select>
 	    </div><!--close language_container-->
     </div><!--close strapline-->
 	  <nav>
 	    <div id="menubar">
         <ul id="nav">
-          <li class="current"><a href="index_ch1.html">首頁</a></li>
-          <li><a href="mywork_ch1.html">我的作品</a></li>
-          <li><a href="more_ch1.html">更多</a></li>
-          <li><a href="personal_ch1.html">私人</a></li>
+          <li class="current"><a href="index.html">Home</a></li>
+          <li><a href="mywork.html">My Work</a></li>
+          <li><a href="more.html">More</a></li>
+          <li><a href="personal.html">Personal</a></li>
         </ul>
       </div><!--close menubar-->
     </nav>
@@ -41,9 +41,9 @@
     <div id="slideshow_container">  
 	    <div class="slideshow">
 	      <ul class="slideshow">
-          <li class="show"><img width="940" height="250" src="images/home_1.jpg" alt="&quot;甜蜜的家&quot;" /></li>
-          <li><img width="940" height="250" src="images/home_2.jpg" alt="&quot;快樂&quot;" /></li>
-          <li><img width="940" height="250" src="images/home_3.jpg" alt="&quot;甜美的笑容&quot;" /></li>
+          <li class="show"><img width="940" height="250" src="../images/home_1.jpg" alt="&quot;Sweet home&quot;" /></li>
+          <li><img width="940" height="250" src="../images/home_2.jpg" alt="&quot;Happy&quot;" /></li>
+          <li><img width="940" height="250" src="../images/home_3.jpg" alt="&quot;Sweet smile&quot;" /></li>
         </ul>
 	    </div><!--close slideshow-->
 	  </div><!--close slideshow_container-->
@@ -51,32 +51,32 @@
 	<div id="site_content">
 	  <div id="content">
       <div class="content_item">
-	      <h1>歡迎光臨我的網站</h1> 
-            <p>我住台灣，是個有經驗的軟體工程師，學習英文與參與開放原始碼的工作是我的興趣。</p>
+	      <h1>Welcome To My Website</h1> 
+            <p>I am an experienced programmer who live in Taiwan, learning English and working with open source code as my hobby.</p>
           <div class="content_container">       
-		        <h3>我的技能︰</h3>
+		        <h3>My skills/knowledge:</h3>
 		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, OOP/Design
                     Pattern, OOA/UML tool, Linux device driver, Digital TV software.</p>
           </div><!--close content_container-->
 
           <div class="content_container">       
-		        <h3>我的嗜好︰</h3>
-		        <p>電腦與英文的閱讀及寫作。 網球、騎腳踏車、看電影。</p>
+		        <h3>My hobbies:</h3>
+		        <p>Computer/English study and writing. Tennis, biking, movie.</p>
           </div><!--close content_container-->
 		  </div><!--close content_item-->
     </div><!--close content-->   
 	</div><!--close site_content-->  	
 
   <footer>
-    網頁樣板來自 <a href="http://www.freehtml5templates.co.uk">免費 HTML5 樣板</a>
+    website template by <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a>
   </footer>
 	
   </div><!--close main-->
 
   <!-- javascript at the bottom for fast page loading -->
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/image_slide.js"></script>
-  <script type="text/javascript" src="js/functions.js"></script>
+  <script type="text/javascript" src="../js/jquery.min.js"></script>
+  <script type="text/javascript" src="../js/image_slide.js"></script>
+  <script type="text/javascript" src="../js/functions.js"></script>
   
 </body>
 </html>
