--- a/ch1/index.html
+++ b/ch1/index.html
@@ -55,8 +55,7 @@
             <p>我住台灣，是個有經驗的軟體工程師，學習英文與參與開放原始碼的工作是我的興趣。</p>
           <div class="content_container">       
 		        <h3>我的技能︰</h3>
-		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, OOP/Design
-                    Pattern, OOA/UML tool, Linux device driver, Digital TV software.</p>
+		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, Digital TV software, OOP/Design Pattern, OOA/UML tool, Linux device driver, cmake, html/javascript.</p>
           </div><!--close content_container-->
 
           <div class="content_container">       
