--- a/en/index.html
+++ b/en/index.html
@@ -55,8 +55,7 @@
             <p>I am an experienced programmer who live in Taiwan, learning English and working with open source code as my hobby.</p>
           <div class="content_container">       
 		        <h3>My skills/knowledge:</h3>
-		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, OOP/Design
-                    Pattern, OOA/UML tool, Linux device driver, Digital TV software.</p>
+		        <p>LLVM backend, compiler, CPU architecture, Verilog, C++, Digital TV software, OOP/Design Pattern, OOA/UML tool, Linux device driver, cmake, html/javascript.</p>
           </div><!--close content_container-->
 
           <div class="content_container">       
