--- a/ch1/more.html
+++ b/ch1/more.html
@@ -56,8 +56,10 @@
 
           <div class="content_container">
             <h3>履歷:</h3>
-              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="../images/User-Coat-Red-icon.png" title="履歷(html)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="../images/User-Coat-Red-icon.png" title="履歷(pdf)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/briefresume.html"><img style="vertical-align: middle;" src="../images/html-icon-brief.png" title="簡單履歷(html)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/detailresume.html"><img style="vertical-align: middle;" src="../images/html-icon-detail.png" title="詳細履歷(html)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/briefresume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Mimetypes-application-pdf-icon.png" title="簡單履歷(pdf)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/detailresume_cschen.pdf"><img style="vertical-align: middle;" src="../images/Adobe-PDF-Reader-Book-icon.png" title="詳細履歷(pdf)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
           </div><!--close content_container-->
 
           <div class="content_container">
